# gcp-k8s-storage

./: CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
src/: charm.py  cloud_credentials.py  config.py  requires_integrator.py  storage_manifests.py
tests/data/: charm.yaml  kube_control_data.yaml
tests/integration/: conftest.py  test_gcp_cloud_provider.py  test_gcp_k8s_storage.py
tests/unit/: test_charm.py
upstream/: update.py
upstream/cloud_storage/manifests/v1.13.5/: kustomized.yaml
upstream/cloud_storage/manifests/v1.13.6/: kustomized.yaml
upstream/cloud_storage/manifests/v1.13.7/: kustomized.yaml
upstream/cloud_storage/manifests/v1.13.8/: kustomized.yaml
upstream/cloud_storage/manifests/v1.14.0/: kustomized.yaml
upstream/cloud_storage/manifests/v1.14.1/: kustomized.yaml
upstream/cloud_storage/manifests/v1.14.2/: kustomized.yaml
upstream/cloud_storage/manifests/v1.14.3/: kustomized.yaml
upstream/cloud_storage/manifests/v1.15.0/: kustomized.yaml
upstream/cloud_storage/manifests/v1.15.1/: kustomized.yaml
upstream/cloud_storage/manifests/v1.15.2/: kustomized.yaml
upstream/cloud_storage/manifests/v1.15.3/: kustomized.yaml
upstream/cloud_storage/manifests/v1.15.4/: kustomized.yaml
upstream/cloud_storage/manifests/v1.16.1/: kustomized.yaml
upstream/cloud_storage/manifests/v1.17.8/: kustomized.yaml
upstream/cloud_storage/manifests/v1.3.0/: kustomized.yaml
upstream/cloud_storage/manifests/v1.3.1/: kustomized.yaml
(+17 files in other folders)
