# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name="gcp-k8s-storage"
version = "0.0.0"
description = "Charmed Operators for GCP K8s Storage"
readme = "README.md"
requires-python = ">=3.10"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.ruff]
line-length = 99

# Linting tools configuration

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = [
    "C408",
    "D107",
    "D203",
    "D213",
    "N805"
]
per-file-ignores = {"tests/*" = ["D100","D103"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
mypy_path = "src:lib"
ignore_missing_imports = true

[tool.codespell]
skip = ".git,.tox,build,lib,venv,htmlcov,.mypy_cache,icon.svg,.ruff_cache,.coverage,*.yaml"
